Directives proof of concept

--- a/dingus/index.html
+++ b/dingus/index.html
@@ -24,7 +24,7 @@
       <label for="smart">Smart punctuation</label>
       <input type="checkbox" id="smart"/>
       </p>
-      <textarea id="text">## Try CommonMark
+      <textarea id="text" spellcheck="off">## Try CommonMark
 
 You can try CommonMark here.  This dingus is powered by
 [commonmark.js](https://github.com/commonmark/commonmark.js), the
